<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiceRoller</string>
    <string name="action_settings">Settings</string>
    <string name="d6">1D6</string>
    <string name="filler">TEXTFILLER</string>
    <string name="resulttitle">Roll Result:</string>
    <string name="d2">1D2</string>
    <string name="d4">1D4</string>
    <string name="d8">1D8</string>
    <string name="d10">1D10</string>
    <string name="d12">1D12</string>
    <string name="d20">1D20</string>

</resources>
